
2017-05-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>


	* parser.y: bug #373 - level 78 constants: only allow a single value
	  and no optional ARE
	* parser.y: don't check the warning option for cb_warning[_x] twice

2017-05-14  Ron Norman <rjn@inglenet.com>

	* typeck.c (cb_build_binary_op): use integer arithmetic for compile
	  time configuration instead of (pow)

2017-05-13  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (validate_move): make warning on numeric literals in VALUE
	  clause of numeric-edited items configurable (original patch thanks to
	  David Newall).

2017-05-10  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Added "Too many errors" message to listing.

2017-05-08  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Added code to generate listing when max error count exceeded.

2017-05-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (emit_entry): checked RETURNING item for not having
	  REDEFINES clause, use field name instead of cb_name(reference)

2017-05-01  Ron Norman <rjn@inglenet.com>

	* tree.c: improved resolving constant expressions at compile time:
	  now handles cases with decimal constants, too
	* parser.y, typeck.c, tree.h: Implement arithmetic-osvs for conditions;
	  compute intermediate results to precision of variables used in expression

2017-04-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, error.c, flag.def: added -fmax-errors / cb_max_errors
	  for early/late aborting depending on number of errors, defaulting
	  to the old value: 100
	* cobc.c: added -W[no-]fatal-errors for aborting on first error
	  note: this option takes precedence over -fmax-errors
	* cobc.c: return 97 for aborts, not 99 as autotest recognizes 99
	  as hard failure and we may want to check for aborts
	* cobc.c: simplified --no-symbols option handling

2017-04-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: using builtin rule for bison and cleaned rule for