@@ -10222,6 +10222,10 @@ set_to:
   {
 	cb_emit_set_to ($1, $3);
   }
+| target_x_list TO SIZE OF x	// ACUCOBOL extension, cater for dialect setting later
+  {
+	cb_emit_move (cb_build_length ($5), $1);
+  }
 ;
 
 /* SET name ... UP/DOWN BY expr */
