@@ -1,4 +1,9 @@
 
+2017-05-21  Ron Norman <rjn@inglenet.com>
+
+	* parser.y: accept ACUCOBOL SET var TO SIZE OF field, handle as
+	  MOVE LENGTH OF field TO var
+
 2017-05-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 
